--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -306,26 +306,37 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="gamerCell" rowHeight="74" id="b5c-vX-wrm">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="74"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="gamerCell" rowHeight="75" id="b5c-vX-wrm" customClass="gamerMatchTableViewCell" customModule="GamerMatch" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b5c-vX-wrm" id="4bL-dQ-R3a">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="73.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Os3-ll-ncq">
-                                                    <rect key="frame" x="15" y="6" width="60" height="60"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Os3-ll-ncq">
+                                                    <rect key="frame" x="15" y="11" width="56.5" height="53"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DML-cB-oYd">
-                                                    <rect key="frame" x="91" y="26" width="268" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DML-cB-oYd">
+                                                    <rect key="frame" x="87.5" y="23.5" width="272.5" height="26.5"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Os3-ll-ncq" firstAttribute="top" secondItem="4bL-dQ-R3a" secondAttribute="topMargin" id="AMY-zy-BDH"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Os3-ll-ncq" secondAttribute="bottom" id="AhB-6R-SzD"/>
+                                                <constraint firstItem="DML-cB-oYd" firstAttribute="leading" secondItem="Os3-ll-ncq" secondAttribute="trailing" constant="16" id="QH8-ww-zzI"/>
+                                                <constraint firstItem="Os3-ll-ncq" firstAttribute="width" secondItem="4bL-dQ-R3a" secondAttribute="width" multiplier="0.15" id="TMw-ED-whU"/>
+                                                <constraint firstItem="DML-cB-oYd" firstAttribute="centerY" secondItem="Os3-ll-ncq" secondAttribute="centerY" id="c32-Ir-wtD"/>
+                                                <constraint firstItem="Os3-ll-ncq" firstAttribute="leading" secondItem="4bL-dQ-R3a" secondAttribute="leadingMargin" id="fER-qC-E7X"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="DML-cB-oYd" secondAttribute="trailing" id="jzQ-yb-LQz"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="gamerAvatarImageView" destination="Os3-ll-ncq" id="SJk-BG-EjS"/>
+                                            <outlet property="gamerUsernameLabel" destination="DML-cB-oYd" id="nXZ-Ye-ufF"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
